--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
       rgba(158, 58, 58, 0.8),
       rgba(228, 187, 74, 0.7)
     ),
-    url(images/wp3916518.jpg);
+    url(images/body-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
